# University-of-Bonn-classes

./: .gitignore  README.md
ModernCpp/: notes.md
ModernCpp/Homeworks/homework_1/: CMakeLists.txt
ModernCpp/Homeworks/homework_2/: CMakeLists.txt
ModernCpp/Homeworks/homework_2/apps/: CMakeLists.txt  main.cpp
ModernCpp/Homeworks/homework_2/my_vector/: CMakeLists.txt  my_vector.cpp  my_vector.hpp
ModernCpp/Homeworks/homework_3/: CMakeLists.txt  open3d
ModernCpp/Homeworks/homework_3/apps/: CMakeLists.txt  main.cpp
ModernCpp/Homeworks/homework_3/my_pointcloud/: CMakeLists.txt  MyPointCloud.cpp  MyPointCloud.hpp  Utilities.cpp  Utilities.hpp
ModernCpp/Homeworks/homework_4/: CMakeLists.txt  piante.ply
ModernCpp/Homeworks/homework_4/app/: CMakeLists.txt  main.cpp
ModernCpp/Homeworks/homework_4/my_pointcloud/: CMakeLists.txt
ModernCpp/Lecture1/: main.i  main.s
ModernCpp/Lecture2/: CMakeLists.txt
ModernCpp/Lecture2/include/: tools.hpp
ModernCpp/Lecture2/src/: main.cpp  tools.cpp
ModernCpp/Lecture3/: anatomy.cpp
ModernCpp/Lecture4/: CMakeLists.txt  Notes.md
ModernCpp/Lecture4/apps/: CMakeLists.txt  main.cpp
ModernCpp/Lecture4/point_class/: CMakeLists.txt  Point.hpp
ModernCpp/Lecture5/: Notes.md  singleton.hpp
ModernCpp/Lecture7/: notes.md
SensorsAndStateEstimation/: README.md  requirements.txt
SensorsAndStateEstimation/HW1/: task_1.ipynb  utils.py
